fix: bunch of layout issues

--- a/src/Features/Execution/Main/ExecutionHeader/executionHeader.module.scss
+++ b/src/Features/Execution/Main/ExecutionHeader/executionHeader.module.scss
@@ -14,6 +14,7 @@
   align-items: center;
   display: flex;
   margin: 1.125rem 0 1.5rem 0;
+  overflow: hidden;
 }
 
 .data {
